<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dip"
        android:text="@string/main_view_top_prompt" />

    <TextView
        android:id="@+id/main_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dip"
        android:layout_marginTop="20dip"
        android:paddingLeft="10dip"
        android:paddingTop="5dip"
        android:paddingBottom="2dip"
        android:text="@string/setting" />

    <TextView
        android:id="@+id/main_top_line"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/main_setting"
        android:layout_marginTop="5dip"
        android:background="@android:color/darker_gray" />

    <ListView
        android:id="@+id/main_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/main_top_line"
        android:layout_marginLeft="20dip" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@android:color/darker_gray" >

        <CheckBox
            android:id="@+id/clean_checkbook"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:layout_marginLeft="20dip" />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingLeft="25dip"
            android:paddingRight="25dip"
            android:layout_centerHorizontal="true"
            android:text="@string/clean_" 
            android:gravity="center_horizontal|center_vertical"
           android:textColor="@color/red_color"/>
    </RelativeLayout>

</RelativeLayout>